<resources>
    <string name="app_name">DoctorAssitant</string>
    <string name="leftmoney">余额</string>
    <string name="charge">充值</string>
    <string name="medicalcard">就诊卡</string>
    <string name="phone">手机号</string>
    <string name="nickname">更改昵称</string>
    <string name="changephoto">更换头像</string>
    <string name="changepassword">密码修改</string>
    <string name="idinfo">身份信息</string>
    <string name="more">详细</string>

    <string name="test">被测量者取坐位，最好坐靠背椅；裸露右上臂，肘部置于与心脏同一水平。若疑有外周血管病，首次就诊时应测双臂血压。特殊情况下测量血压时可以取卧位或站立位；老人、糖尿病人及常出现体位性低血压情况者，应测立位血压。立位血压测量应在卧位改为站立位2分钟后。不论被测者体位如何，血压计应放在心脏水平。被测量者取坐位，最好坐靠背椅；裸露右上臂，肘部置于与心脏同一水平。若疑有外周血管病，首次就诊时应测双臂血压。特殊情况下测量血压时可以取卧位或站立位；老人、糖尿病人及常出现体位性低血压情况者，应测立位血压。立位血压测量应在卧位改为站立位2分钟后。不论被测者体位如何，血压计应放在心脏水平。被测量者取坐位，最好坐靠背椅；裸露右上臂，肘部置于与心脏同一水平。若疑有外周血管病，首次就诊时应测双臂血压。特殊情况下测量血压时可以取卧位或站立位；老人、糖尿病人及常出现体位性低血压情况者，应测立位血压。立位血压测量应在卧位改为站立位2分钟后。不论被测者体位如何，血压计应放在心脏水平。被测量者取坐位，最好坐靠背椅；裸露右上臂，肘部置于与心脏同一水平。若疑有外周血管病，首次就诊时应测双臂血压。特殊情况下测量血压时可以取卧位或站立位；老人、糖尿病人及常出现体位性低血压情况者，应测立位血压。立位血压测量应在卧位改为站立位2分钟后。不论被测者体位如何，血压计应放在心脏水平。被测量者取坐位，最好坐靠背椅；裸露右上臂，肘部置于与心脏同一水平。若疑有外周血管病，首次就诊时应测双臂血压。特殊情况下测量血压时可以取卧位或站立位；老人、糖尿病人及常出现体位性低血压情况者，应测立位血压。立位血压测量应在卧位改为站立位2分钟后。不论被测者体位如何，血压计应放在心脏水平。</string>
</resources>
